@@ -125,10 +125,14 @@ ATTRS{idProduct}=="1145", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1146", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1147", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="1148", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="1149", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="114a", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="114b", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="114c", ENV{utsushi_driver}="esci"
 ATTRS{idProduct}=="114d", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="114f", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="1150", ENV{utsushi_driver}="esci"
+ATTRS{idProduct}=="1151", ENV{utsushi_driver}="esci"
 
 ATTRS{idProduct}=="013c", ENV{utsushi_driver}="esci:gt-s650", ENV{firmware_file}="esfw010c.bin"
 ATTRS{idProduct}=="013d", ENV{utsushi_driver}="esci:gt-s650", ENV{firmware_file}="esfw010c.bin"
