@@ -1,6 +1,16 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+utsushi-0.47.0                                            (2018-09-03)
+----------------------------------------------------------------------
+ * adds driver support for new models
+ 
+----------------------------------------------------------------------
+utsushi-0.46.0                                            (2018-08-07)
+----------------------------------------------------------------------
+ * adds driver support for new models
+ 
+----------------------------------------------------------------------
 utsushi-0.45.0                                            (2018-07-26)
 ----------------------------------------------------------------------
  * adds driver support for new models
